# Saku

./: .gitignore  CMakeLists.txt  Parser.cpp  Parser.h  README.md  configure.h.in  main.cpp
core/: Command.h  CommandManager.h  Command_Help.cpp  Command_KernelInfo.cpp  Command_KernelInfo.h  Command_Pow.cpp  Command_Pow.h
core/commands/: Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  Command_CalcFunction.cpp  Command_CalcFunction.h  Command_Help.cpp  Command_Help.h  Command_KernelInfo.cpp  Command_KernelInfo.h  Command_Pow.cpp  Command_Settings.cpp  Command_Settings.h  Command_Variables.cpp  Command_Variables.h
core/functions/: Function.h  Function_Pow.cpp  Function_Pow.h
core/kernel/: CPUPlatform.cpp  CPUPlatform.h  Kernel.cpp  Kernel.h  Platform.h  RuntimePlatform.cpp  RuntimePlatform.h
core/kernel/objects/: FileObject.cpp  FileObject.h  Object.cpp  Object.h
core/kernel/operations/: Operation.h  Operation_Hash.h  Operation_Integral.cpp  Operation_Integral.h  Operation_Pow.cpp  Operation_Pow.h  Operation_Size.h
core/operations/: Operation.h  Operation_Integral.cpp  Operation_Integral.h  Operation_Pow.cpp  Operation_Pow.h  Result.h
